# ChangeLog for dev-java/maven-embedder
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Oct 2007; kiorky <kiorky@cryptelium.net> ++:
  -m bumped but i keep last version to be sure, waiting for the whole beast to
  be recompiled one time entirely

  11 Jun 2007; kiorky <kiorky@cryptelium.net> +files/build-1.9.xml,
  +maven-embedder-2.1_pre20070529.ebuild:
  commit -c -m Added as a maven dependency. See #181694
