@@ -1,5 +1,5 @@
 DIST maven-embedder-2.1_pre20070529.tar.bz2 55918 RMD160 a4801701e77c4af56d044ac9d9572b3c006627fc SHA1 470fabf741ee054ad0f72425a9ef1da01ed91485 SHA256 97238f0a8b602ecf4812b400ab5a70a8a5e3162c7f6ffa878c554bf2c253321c
 DIST maven-embedder-2.1_pre20071021.tar.bz2 411751 RMD160 d41dc10874a3d968e084ae86be0198b828bc9524 SHA1 c45ce7e1ede2176f90b431ba7676ce867ae0ed66 SHA256 6d2736300b2c07177d0e6ce989c143ff6876d46f5cbe9a7c4e1b0fa2a7860916
 EBUILD maven-embedder-2.1_pre20070529.ebuild 1510 RMD160 593ba80f213ded103e2ec1c78058c8fe8768bd6f SHA1 fa57f09ab50c86569b5508ce7299054f514432f9 SHA256 56f0b1ad71174443ad3d7ddaa22120d61d241a712587d37dcf16379128cb6767
-EBUILD maven-embedder-2.1_pre20071021.ebuild 1556 RMD160 6e598318c2b62924177e9698877892f7401d9c65 SHA1 3d8c96d07d4c991556a38b6d4034734eda3ad139 SHA256 561e32eae3cb5f4b8acdfa7ce99a4d13059cc63701dfa591b6b060c0b9bd6d48
-MISC ChangeLog 455 RMD160 6a040aad56a9ce8d0d61c66ddf3b7acca5939b97 SHA1 10d9da181b2e9a6ff130b687d4190c8cf5af7647 SHA256 9b568adfbc32d088e44eb74dfe12ee4e029d93950b47a7273852a9a2e604ab84
+EBUILD maven-embedder-2.1_pre20071021.ebuild 1612 RMD160 2c1c0ec0435e812cfe5fa7191e384620db36e73a SHA1 b8ade3e160333245b23ec0336ca33127bff6fa3d SHA256 9e25bb236c59a7d1e763a8a6866283308584011aae232b00b050393bce8e38fa
+MISC ChangeLog 557 RMD160 3d69ba395b699035de28a4d5ea22c55282a53f97 SHA1 78a24858c9bc9fef65cfbc9499249035dffbfe01 SHA256 e0a5d5365db498875b877da64a89f0846800ec025dc9ca0fb1d46b42bbff4389
