@@ -23,15 +23,15 @@ dev-java/maven-core
 dev-java/maven-lifecycle
 dev-java/maven-model
 dev-java/maven-monitor
+>=dev-java/plexus-utils-1.4.7_pre20071021
 dev-java/maven-plugin-api
 dev-java/maven-plugin-descriptor
 dev-java/maven-profile
 dev-java/maven-project
 dev-java/maven-settings
 dev-java/plexus-classworlds
-=dev-java/plexus-component-api-1.0.33*
-=dev-java/plexus-container-default-1.0.33*
->=dev-java/plexus-utils-1.4.7
+>=dev-java/plexus-component-api-1.0_alpha33_pre20071021
+>=dev-java/plexus-container-default-1.0_alpha33_pre20071021
 dev-java/wagon-file
 dev-java/wagon-http-lightweight
 dev-java/wagon-provider-api
@@ -56,8 +56,8 @@ maven-profile
 maven-project
 maven-settings
 plexus-classworlds
-plexus-component-api-1.0.33
-plexus-container-default-1.0.33
+plexus-component-api-1.0_alpha33
+plexus-container-default-1.0_alpha33
 plexus-utils-1.4.7
 wagon-file
 wagon-http-lightweight
